--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--goit-markup-hw-04 DENYS TYMOFIEIEV-->
+<!--goit-markup-hw-05 DENYS TYMOFIEIEV-->
 <!--Страница Портфолио-->
 <html lang="ru">
   <head>
@@ -30,7 +30,9 @@
           <ul class="nav-block">
             <li class="list"><a href="./">Студия</a></li>
             <li class="list">
-              <a class="active-link" href="./portfolio.html">Портфолио</a>
+              <div>
+                <a class="active-link" href="./portfolio.html">Портфолио</a>
+              </div>
             </li>
             <li class="list"><a href="">Контакты</a></li>
           </ul>
@@ -80,12 +82,20 @@
         <div class="container">
           <!--Content-projects-section-->
           <ul class="portfolio-projects">
-            <li>
+            <li class="project-li">
               <a href=""
-                ><img
-                  src="images/img-portfolio/img-tehnocrack.jpg"
-                  alt="Приложение на ноутбуке"
-                />
+                ><div class="project-im">
+                  <img
+                    src="images/img-portfolio/img-tehnocrack.jpg"
+                    alt="Приложение на ноутбуке"
+                  />
+                  <p class="project-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <h2 class="img-head">Технокряк</h2>
                 <p class="img-p">Веб-сайт</p>
               </a>
